2001-10-14  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: improve the layout of the memory/swap sizes
	to make them more readable

	* load-graph.c: update the labels accordingly

2001-10-14  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: remove the free space column in the disk
	list and make the mount directory column the second
	column. Hopefully makes the list a little easier to digest.

	* callbacks.c: make the size string show 1 decimal for
	GB sizes and no decimal for MB sizes as it aids the display
	of the sizes

2001-09-25  Kevin Vandersloot <kfv101@psu.edu>

	* release 0.10.3

	* interface.c: comment out the "about process" item as it is
	stupid right now. Maybe in the future when we get a good
	help browser.

2001-09-25  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: change GDK_INTERP_NEAREST to HYPER for
	better scaling of the icons.

2001-09-25  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: make the minimum update interval for
	the process viewer be 1 sec otherwise I see crashing on
	startup (and it uses too much cpu otherwise)

2001-09-22  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: don't load the desktop files twice

	* interface.c: fix lines needing removal so this compiles

2001-09-22  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c: check to see if load-graph is not NULL in
	load-graph[start, stop]. Do this just so it's easy to not
	show the sys tab for testing purposes

2001-09-22  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: make the disks frame seperated from the graphs
	by a vpaned
	
	* procman.[c,h]: save the paned pos

2001-09-19  Kjartan Maraas  <kmaraas@gnome.org>

	* load-graph.c: Remove extra #include <config.h>
	* prettytable.c: Move #include <config.h> to the top
	to make i18n work. Please try now.
 	
2001-09-19  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c (free_info): call gdk_pixbuf_unref to free the 
	pixbuf and a memory leak.

2001-09-19  Kevn Vandersloot <kfv101@psu.edu>
