@@ -1,3 +1,7 @@
+2001-10-17  Kevin Vandersloot <kfv101@psu.edu>
+
+	* interface.c: minor tweaks
+
 2001-10-14  Kevin Vandersloot <kfv101@psu.edu>
 
 	* interface.c: improve the layout of the memory/swap sizes
